# plankcoin

./: .gitignore  Cargo.toml  Plankcoin.main.toml  README.md
plankcoin-core/: Cargo.toml  README.md
plankcoin-core/src/: account.rs  auditor.rs  bank.rs  lib.rs  net.rs
plankcoin-core/src/auditor/: errors.rs
plankcoin-core/src/bank/: enums.rs  sdboxes.rs  vault.rs  vaults.rs
plankcoin-core/src/bank/sdboxes/: sdbox.rs
plankcoin-core/src/bank/vault/: sd_boxes.rs  vault_info.rs
plankcoin-core/src/bank/vault/sd_boxes/: sd_box.rs
plankcoin-core/src/bank/vault/vault_info/: traits.rs
plankcoin-core/src/bank/vaults/: vault.rs
plankcoin-core/src/bank/vaults/vault/: info.rs  sdboxes.rs
plankcoin-core/src/bank/vaults/vault/info/: state_level.rs  sup_level.rs  top_level.rs
plankcoin-core/src/cmn/: constants.rs  enums.rs  externs.rs  libraries.rs  library.rs  mod.rs  policy.rs  structs.rs  traits.rs  types.rs
plankcoin-core/src/net/: msg.rs  netconfig.rs
plankcoin-core/src/net/cmn/: constants.rs  enums.rs  mod.rs  structs.rs
plankcoin-core/src/net/msg/: msg_version.rs
plankcoin-docs/architecture/: Ko.md  README.md
plankcoin-docs/whitepaper/: Ko.md  README.md
plankcoin-docs/yellowpaper/: Ko.md  README.md
plankcoin-node/: Cargo.toml
plankcoin-node/src/: cli.rs  init.rs  main.rs
plankcoin-node/src/cli/: wallet.rs
plankcoin-node/src/cli/wallet/: constants.rs  enums.rs  errors.rs  structs.rs
plankcoin-node/src/cli/wallet/cmn/: enums.rs  functions.rs  libraries.rs  mod.rs
plankcoin-node/src/cmn/: constant.rs  constants.rs  enums.rs  function.rs  functions.rs  libraries.rs  macros.rs  mod.rs  traits.rs
plankcoin-node/src/common/: functions.rs  library.rs  mod.rs
plankcoin-node/src/init/: config.rs  logger.rs  opt.rs  settings.rs
plankcoin-node/src/init/settings/: conf.rs  logg.rs  opt.rs
