[package]
name = "plankcoin-core"
description = "Plankcoin core"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# log
log = { workspace = true }
pretty_env_logger = { workspace = true }

# error
anyhow = { workspace = true }
thiserror = { workspace = true }