[package]
name = "plankcoin-core"
description = "Plankcoin core"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# log
log = { workspace = true }
pretty_env_logger = { workspace = true }

# error
anyhow = { workspace = true }
thiserror = { workspace = true }

# time
chrono = { workspace = true }

# serde
serde = { workspace = true }
ed25519-dalek = { version = "1", features = ["serde"] }

# crypto
sha3 = "0.10"

# util
rand = "0.7" # 0.7 for compatibility with ed25519-dalek
primitive-types = "0.12"
bitflags = "1.3.2"
dns-lookup = "1.0.8"