[package]
name = "plankcoin-node"
version = "0.1.0"
edition = "2021"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/plankcoin"
repository = "https://github.com/just-do-halee/plankcoin"
keywords = ["plankcoin", "blockchain", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
license = "LGPL-3.0-or-later"
readme = "README.md"
description = "Plankcoin node"

[dependencies]
# core
plankcoin-core = { path = "../plankcoin-core" }

# log
pretty_env_logger = "0.4.0"
log = "0.4.17"

# error
anyhow = "1"

# cli & config
clap = { version = "3.2.22", features = ["derive"] }
config = "0.13.2"

# util
fn_once = "0.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
