[package]
name = "plankcoin-node"
description = "Plankcoin node"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[features]
# default = ["once_off"] # disabling #[once] by default
once_off = []

[dependencies]
# core
plankcoin-core = { path = "../plankcoin-core" }

# log
log = { workspace = true }
pretty_env_logger = { workspace = true }

# error
anyhow = { workspace = true }
thiserror = { workspace = true }

# cli & config
clap = { version = "3.2.22", features = ["derive"] }
config = "0.13.2"

# terminal
crossterm = "0.25"

# util
fn_once = "0.3"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
