[package]
name = "plankcoin-node"
description = "Plankcoin node"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[features]
# default = ["once_off"] # disabling #[once] by default
once_off = []

[dependencies]
# core
plankcoin-core = { path = "../plankcoin-core" }

# log
log = { workspace = true }
pretty_env_logger = { workspace = true }

# error
anyhow = { workspace = true }
thiserror = { workspace = true }

# serde
serde = { workspace = true }
bincode = "1.3"

# crypto
aes-gcm = "0.10" # it is not suitable for use on processors with a variable-time multiplication operation (e.g. short circuit on multiply-by-zero / multiply-by-one, such as certain 32-bit PowerPC CPUs and some non-ARM microcontrollers).

# cli & config
clap = { version = "3.2", features = ["derive"] }
config = "0.13"
console = "0.15"

# util
fn_once = "0.3"
lazy_static = "1.4"
